--- a/enierent/app/globals.css
+++ b/enierent/app/globals.css
@@ -135,3 +135,13 @@
 ::-webkit-scrollbar-thumb:hover {
   background: hsl(var(--primary) / 0.5);
 }
+
+@import "leaflet/dist/leaflet.css";
+
+/* Fix for Leaflet icons */
+.leaflet-default-icon-path {
+  background-image: url("https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png");
+}
+.leaflet-default-shadow-path {
+  background-image: url("https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png");
+}
